chore: Revert "chore: fix deprecated division in sass (#1007)"
This reverts commit afa6f841801805e73efa88e8c05fe65b81529db6.

--- a/packages/dendron-11ty/raw-assets/sass/_portal.scss
+++ b/packages/dendron-11ty/raw-assets/sass/_portal.scss
@@ -1,5 +1,3 @@
-@use "sass:math";
-
 // Clear normal iframe styles
 iframe{
 	border: none;
@@ -89,7 +87,7 @@ iframe{
 			z-index: 50;
 		}			
 		.portal-parent-text{
-			padding:math.div($base-line-height, 2);
+			padding:$base-line-height / 2;
 			color: #5C6D73;			
 			z-index: 40;
 		}
