--- a/packages/dendron-next-server/styles/scss/_portal.scss
+++ b/packages/dendron-next-server/styles/scss/_portal.scss
@@ -1,5 +1,3 @@
-@use "sass:math";
-
 // Clear normal iframe styles
 iframe{
 	border: none;
@@ -89,7 +87,7 @@ iframe{
 			z-index: 50;
 		}			
 		.portal-parent-text{
-			padding:math.div($base-line-height, 2);
+			padding:$base-line-height / 2;
 			color: #5C6D73;			
 			z-index: 40;
 		}
