--- a/packages/dendron-next-server/styles/scss/support/_functions.scss
+++ b/packages/dendron-next-server/styles/scss/support/_functions.scss
@@ -1,7 +1,5 @@
-@use "sass:math";
-
 @function rem($size, $unit: "") {
-  $remSize: math.div($size, $root-font-size);
+  $remSize: $size / $root-font-size;
 
   @if ($unit == false) {
     @return #{$remSize};
