--- a/packages/dendron-next-server/assets/themes/light-theme.less
+++ b/packages/dendron-next-server/assets/themes/light-theme.less
@@ -10,6 +10,7 @@
 @component-background: #ffffff;
 @layout-body-background: #ffffff;
 @border-radius-base: 4px;
+@layout-header-background: #F5F7F9;
 
 /* width */
 ::-webkit-scrollbar {
