--- a/packages/nextjs-template/styles/scss/main.scss
+++ b/packages/nextjs-template/styles/scss/main.scss
@@ -20,3 +20,8 @@ $spacing-unit:     30px !default;
 $text-color:       #111 !default;
 // Portal end
 @import "portal.scss";
+
+// TODO: new
+#__next {
+	height: 100%; // or min-height
+}
