spike: use `Menu` as an uncontrolled component
This allows to close the menu even then `expandedKeys` says otherwise.

--- a/packages/nextjs-template/styles/scss/main.scss
+++ b/packages/nextjs-template/styles/scss/main.scss
@@ -29,3 +29,9 @@ $text-color:       #111 !default;
 hr {
 	height: "1px";
 }
+
+[data-expandedicon="true"] {
+	svg {
+		pointer-events: none;
+	}
+}
