--- a/packages/nextjs-template/styles/scss/main.scss
+++ b/packages/nextjs-template/styles/scss/main.scss
@@ -30,8 +30,35 @@ hr {
 	height: "1px";
 }
 
+// Components
+
+// DendronTreeView
 [data-expandedicon="true"] {
 	svg {
 		pointer-events: none;
+	}
+}
+
+.ant-menu-submenu {
+	> .ant-menu-submenu-title:after {
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		border-right: 3px solid rgb(67, 176, 42); // antd's @border-color-split
+		transform: scaleY(0.0001);
+		opacity: 0;
+		content: '';
+	}
+}
+
+.ant-menu-submenu.dendron-ant-menu-submenu-selected {
+	> .ant-menu-submenu-title {
+		background-color: rgb(230, 240, 225);  // antd's @menu-item-active-bg with ich @primary-1
+	}
+
+	> .ant-menu-submenu-title:after {
+		transform: scaleY(1);
+		opacity: 1;
 	}
 }
