--- a/packages/nextjs-template/styles/scss/main.scss
+++ b/packages/nextjs-template/styles/scss/main.scss
@@ -74,6 +74,7 @@ hr {
 		transform: scaleY(0.0001);
 		opacity: 0;
 		content: '';
+		pointer-events: none; // makes open/close arrows touch-area bigger by giving it "space" to the right from this after element
 	}
 }
 
