spike: move inline styles into scss
This solves an issue of styles being unwanted overritten.
Further this allows to put hover styles for the split button situation.
Though this might be not a solution we want https://www.nngroup.com/articles/split-buttons-navigation/

--- a/packages/nextjs-template/styles/scss/main.scss
+++ b/packages/nextjs-template/styles/scss/main.scss
@@ -34,11 +34,26 @@ hr {
 
 // DendronTreeView
 
+.ant-menu {
+	.ant-menu-submenu-title {
+		[data-expandedicon="true"] {
+			position: absolute;
+			top: 0;
+			right: 3px;
+			height: 100%;
+			margin: 0;
+			padding: 10px;
+			display: flex;
+			align-items: center;
+			// TODO and onHover styles
+		}
+	}
 
-// remove submenu icon in collapsed Menu for first level
-.ant-menu.ant-menu-inline-collapsed {
-	[data-expandedicon="true"] {
-		display: none;
+	&.ant-menu-inline-collapsed {
+		[data-expandedicon="true"] {
+			// remove submenu icon in collapsed Menu for first level
+			display: none;
+		}
 	}
 }
 
