spike: add hover styles
The intend is to add further indicators for what the click might do.
The underline should create an expectation to the user that the page
will be opened. The hover background for the expand icon should indicate
that an interactive button is there, which ideally should indicate that
this would not open a new page but only expand the submenu.

--- a/packages/nextjs-template/styles/scss/main.scss
+++ b/packages/nextjs-template/styles/scss/main.scss
@@ -45,7 +45,15 @@ hr {
 			padding: 10px;
 			display: flex;
 			align-items: center;
-			// TODO and onHover styles
+		}
+	}
+
+	&.ant-menu-inline {
+		.ant-menu-title-content:hover {
+			text-decoration: underline;
+		}
+		[data-expandedicon="true"]:hover {
+			background-color: rgba(0, 0, 0, 0.05);
 		}
 	}
 
