--- a/packages/nextjs-template/styles/scss/main.scss
+++ b/packages/nextjs-template/styles/scss/main.scss
@@ -29,3 +29,63 @@ $text-color:       #111 !default;
 hr {
 	height: "1px";
 }
+
+// Components
+
+// DendronTreeView
+
+.ant-menu {
+	.ant-menu-submenu-title {
+		[data-expandedicon="true"] {
+			position: absolute;
+			top: 0;
+			right: 3px;
+			height: 100%;
+			margin: 0;
+			padding: 10px;
+			display: flex;
+			align-items: center;
+		}
+	}
+
+	&.ant-menu-inline {
+		.ant-menu-title-content:hover {
+			text-decoration: underline;
+		}
+		[data-expandedicon="true"]:hover {
+			background-color: rgba(0, 0, 0, 0.05);
+		}
+	}
+
+	&.ant-menu-inline-collapsed {
+		[data-expandedicon="true"] {
+			// remove submenu icon in collapsed Menu for first level
+			display: none;
+		}
+	}
+}
+
+.ant-menu-submenu {
+	> .ant-menu-submenu-title:after {
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		border-right: 3px solid rgb(67, 176, 42); // antd's @border-color-split
+		transform: scaleY(0.0001);
+		opacity: 0;
+		content: '';
+		pointer-events: none; // makes open/close arrows touch-area bigger by giving it "space" to the right from this after element
+	}
+}
+
+.ant-menu-submenu.dendron-ant-menu-submenu-selected {
+	> .ant-menu-submenu-title {
+		background-color: rgb(230, 240, 225);  // antd's @menu-item-active-bg with ich @primary-1
+	}
+
+	> .ant-menu-submenu-title:after {
+		transform: scaleY(1);
+		opacity: 1;
+	}
+}
