--- a/packages/nextjs-template/styles/scss/main.scss
+++ b/packages/nextjs-template/styles/scss/main.scss
@@ -34,7 +34,9 @@ hr {
 
 // DendronLayout
 
-$layout-header-background: #F5F7F9; // @layout-header-background from packages/dendron-next-server/assets/themes/light-theme.less
+// from from packages/dendron-next-server/assets/themes/light-theme.less
+$layout-header-background: #F5F7F9; // @layout-header-background
+$text-color: 'rgba(0,0,0,.85)'; // @text-color
 
 .site-layout-sidebar.ant-layout {
 	background-color: $layout-header-background;
@@ -45,8 +47,7 @@ $layout-header-background: #F5F7F9; // @layout-header-background from packages/d
 
 // DendronTreeMenu
 
-.ant-menu {
-
+.dendron-tree-menu.ant-menu {
 	.ant-menu-submenu-title {
 		[data-expandedicon="true"] {
 			position: absolute;
@@ -58,6 +59,10 @@ $layout-header-background: #F5F7F9; // @layout-header-background from packages/d
 			display: flex;
 			align-items: center;
 		}
+	}
+
+	.ant-menu-item-selected {
+		color: rgba(0,0,0,.85);
 	}
 
 	&.ant-menu-inline {
@@ -75,29 +80,29 @@ $layout-header-background: #F5F7F9; // @layout-header-background from packages/d
 			display: none;
 		}
 	}
-}
 
-.ant-menu-submenu {
-	> .ant-menu-submenu-title:after {
-		position: absolute;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		border-right: 3px solid rgb(67, 176, 42); // antd's @border-color-split
-		transform: scaleY(0.0001);
-		opacity: 0;
-		content: '';
-		pointer-events: none; // makes open/close arrows touch-area bigger by giving it "space" to the right from this after element
-	}
-}
-
-.ant-menu-submenu.dendron-ant-menu-submenu-selected {
-	> .ant-menu-submenu-title {
-		background-color: rgb(230, 240, 225);  // antd's @menu-item-active-bg with ich @primary-1
+	.ant-menu-submenu {
+		> .ant-menu-submenu-title:after {
+			position: absolute;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			border-right: 3px solid rgb(67, 176, 42); // antd's @border-color-split
+			transform: scaleY(0.0001);
+			opacity: 0;
+			content: '';
+			pointer-events: none; // makes open/close arrows touch-area bigger by giving it "space" to the right from this after element
+		}
 	}
 
-	> .ant-menu-submenu-title:after {
-		transform: scaleY(1);
-		opacity: 1;
+	.ant-menu-submenu.dendron-ant-menu-submenu-selected {
+		> .ant-menu-submenu-title {
+			background-color: rgb(230, 240, 225);  // antd's @menu-item-active-bg with ich @primary-1
+		}
+
+		> .ant-menu-submenu-title:after {
+			transform: scaleY(1);
+			opacity: 1;
+		}
 	}
 }
