--- a/packages/nextjs-template/styles/scss/_portal.scss
+++ b/packages/nextjs-template/styles/scss/_portal.scss
@@ -78,15 +78,17 @@ iframe{
 			height: 36px;
 			// background-image: linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0));
 			z-index: 50;
+			pointer-events: none;
 		}
 		.portal-parent-fader-bottom{
 			position: absolute;
 			width: 100%;
 			bottom: 6px;
 			margin-left: 0px;
-			height: 36px;
+			height: 0px;
 			// background-image: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,1));
 			z-index: 50;
+			pointer-events: none;
 		}			
 		.portal-parent-text{
 			padding:math.div($base-line-height, 2);
