Convert slash division to math.div

--- a/packages/dendron-11ty/raw-assets/sass/_portal.scss
+++ b/packages/dendron-11ty/raw-assets/sass/_portal.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 // Clear normal iframe styles
 iframe{
 	border: none;
@@ -89,7 +91,7 @@ iframe{
 			pointer-events: none;
 		}			
 		.portal-parent-text{
-			padding:$base-line-height / 2;
+			padding: math.div($base-line-height, 2);
 			color: #5C6D73;			
 			z-index: 40;
 		}
