--- a/packages/dendron-11ty/raw-assets/sass/minimal-mistakes/_mixins.scss
+++ b/packages/dendron-11ty/raw-assets/sass/minimal-mistakes/_mixins.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 /* ==========================================================================
    MIXINS
    ========================================================================== */
@@ -15,7 +16,7 @@
    ========================================================================== */
 
 @function em($target, $context: $doc-font-size) {
-  @return ($target / $context) * 1em;
+  @return ( math.div($target, $context) * 1em);
 }
 
 
