--- a/packages/dendron-11ty/raw-assets/sass/search.scss
+++ b/packages/dendron-11ty/raw-assets/sass/search.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 //
 // Search input and autocomplete
 //
@@ -8,7 +9,7 @@
   flex-grow: 1;
   height: $sp-10;
   padding: $sp-2;
-  transition: padding linear #{$transition-duration / 2};
+  transition: padding linear #{math.div($transition-duration, 2)};
 
   @include mq(md) {
     position: relative !important;
@@ -26,7 +27,7 @@
   overflow: hidden;
   border-radius: $border-radius;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);
-  transition: height linear #{$transition-duration / 2};
+  transition: height linear #{math.div($transition-duration, 2)};
 
   @include mq(md) {
     position: absolute;
@@ -61,7 +62,7 @@
     padding-left: #{$gutter-spacing + $sp-5};
     font-size: 14px;
     background-color: $body-background-color;
-    transition: padding-left linear #{$transition-duration / 2};
+    transition: padding-left linear #{math.div($transition-duration, 2)};
   }
 
   &:focus {
@@ -81,7 +82,7 @@
 
   @include mq(md) {
     padding-left: $gutter-spacing;
-    transition: padding-left linear #{$transition-duration / 2};
+    transition: padding-left linear #{math.div($transition-duration, 2)};
   }
 
   .search-icon {
@@ -241,7 +242,7 @@
   height: $sp-9;
   background-color: $search-background-color;
   border: 1px solid rgba($link-color, 0.3);
-  border-radius: #{$sp-9 / 2};
+  border-radius: #{math.div($sp-9, 2)};
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);
   align-items: center;
   justify-content: center;
