--- a/packages/dendron-next-server/styles/scss/content.scss
+++ b/packages/dendron-next-server/styles/scss/content.scss
@@ -236,3 +236,14 @@ blockquote {
     }
   }
 }
+
+// Footnotes
+a.fnref {
+	vertical-align: super;
+	font-size: 0.7rem;
+}
+
+a.fn {
+	text-decoration: none;
+  margin-left: 1rem;
+}
