--- a/packages/dendron-11ty/_includes/layouts/default.liquid
+++ b/packages/dendron-11ty/_includes/layouts/default.liquid
@@ -109,7 +109,7 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         
-        {% if dendronConfig.feedback or dendronConfig.workspace.feedback %}
+        {% if dendronConfig.workspace.feedback %}
         <script type="text/javascript" src="/assets/js/rater.js"></script>
         <link rel="stylesheet" type="text/css" href="/assets/css/jquery.feedback_me.css">
         <script type="text/javascript" src="/assets/js/jquery.thumbs.js"></script>
@@ -207,7 +207,7 @@
   <div class="search-overlay"></div>
 {% endif %}
 </div>
-{% if dendronConfig.feedback or dendronConfig.workspace.feedback %}
+{% if dendronConfig.workspace.feedback %}
 
 <div class="modal fade" id="feedbackForm" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
