--- a/packages/nextjs-template/styles/scss/main.scss
+++ b/packages/nextjs-template/styles/scss/main.scss
@@ -116,3 +116,15 @@ $text-color: "rgba(0,0,0,.85)"; // @text-color
     white-space: normal;
   }
 }
+
+.option-link {
+  color: unset;
+  display: block;
+  text-decoration: none;
+  margin: -5px -12px;
+  padding: 5px 12px;
+
+  &:hover {
+    color: unset;
+  }
+}
