--- a/packages/nextjs-template/styles/scss/base.scss
+++ b/packages/nextjs-template/styles/scss/base.scss
@@ -93,7 +93,7 @@ pre {
 li {
   margin: 0.25em 0;
   // Otherwise empty list items stack on top of each other
-  height: 1rem;
+  min-height: 1rem;
 }
 
 img {
